--- a/frontend/src/app/shared/components/table/table.component.scss
+++ b/frontend/src/app/shared/components/table/table.component.scss
@@ -29,3 +29,6 @@
 mat-cell:first-of-type, mat-header-cell:first-of-type, mat-footer-cell:first-of-type {
   padding-left: 0 !important;
 }
+mat-cell:last-of-type, mat-header-cell:last-of-type, mat-footer-cell:last-of-type {
+  padding-right: 0 !important;
+}
